--- a/dogs/templates/dogs/dog_form.html
+++ b/dogs/templates/dogs/dog_form.html
@@ -13,7 +13,7 @@
             <div class="card-body">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit", class="btn btn-outline-success">
+                <button type="submit" , class="btn btn-outline-success">
                     {% if object %}
                         Сохранить
                     {% else %}
@@ -22,22 +22,24 @@
                 </button>
             </div>
         </div>
-        <div class="col-6">
-            <div class="card">
-                <div class="card-header">
-                    Родословная
-                </div>
-                <div class="card-body">
-                    {{ formset.management_form }}
-                    {% for form in formset.forms %}
-                        {{ form.as_p }}
-                        {% if not forloop.last%}
-                            <hr>
-                        {% endif %}
-                    {% endfor %}
+        {% if perms.dogs.change_parent %}
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-header">
+                        Родословная
+                    </div>
+                    <div class="card-body">
+                        {{ formset.management_form }}
+                        {% for form in formset.forms %}
+                            {{ form.as_p }}
+                            {% if not forloop.last %}
+                                <hr>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     </form>
 
 
